création des pages

--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -7,9 +7,9 @@ import '../styles/global.css'
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>ACCUEIL</title>
+		<title>OFFRES</title>
 	</head>
 	<body>
-		<h1>ACCUEIL</h1>
+		<h1>OFFRES</h1>
 	</body>
 </html>
