--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css'
+import Header from "../components/header.astro";
 ---
 
 <html lang="fr">
@@ -9,7 +10,9 @@ import '../styles/global.css'
 		<meta name="generator" content={Astro.generator} />
 		<title>ACCUEIL</title>
 	</head>
+	
 	<body>
+		<Header/>
 		<h1>ACCUEIL</h1>
 	</body>
 </html>
