--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css'
+import Header from "../components/header.astro";
 ---
 
 <html lang="fr">
@@ -10,6 +11,7 @@ import '../styles/global.css'
 		<title>OFFRES</title>
 	</head>
 	<body>
+        <Header/>
 		<h1>OFFRES</h1>
 	</body>
 </html>
