--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css'
 import Header from "../components/header.astro";
+import Layout from '../layouts/Layout.astro';
 ---
 
 <html lang="fr">
@@ -11,7 +12,8 @@ import Header from "../components/header.astro";
 		<title>OFFRES</title>
 	</head>
 	<body>
-        <Header/>
-		<h1>OFFRES</h1>
+        <Layout titre="OFFRES">
+            <h1>OFFRES</h1>
+        </Layout>
 	</body>
 </html>
