--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/header.astro";
+import Footer from "../components/footer.astro";
 const { titre } = Astro.props;
 ---
 
@@ -15,5 +16,6 @@ const { titre } = Astro.props;
         <main>
             <slot />
         </main>
+        <Footer/>
     </body>
 </html>
