--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -2,3 +2,17 @@
     <a href="/">Accueil</a>
     <a href="/offres">Offres</a>
 </nav>
+
+<style>
+    nav{
+        padding-bottom : 20px;
+    }
+    a {
+        margin: 15px;
+        text-decoration: none;
+        font-weight: bold;
+        color: rebeccapurple;
+        background-color: lavender;
+        padding: 1rem;
+    }
+</style>
