--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,3 +19,12 @@ const { titre } = Astro.props;
         <Footer/>
     </body>
 </html>
+
+<style>
+    html, 
+    body {
+        margin: 0;
+        width: 100%;
+        height: 100%;
+    }
+</style>
