--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,3 +2,18 @@
 <nav>
     <a href="/">Accueil</a>
 </nav>
+
+<style>
+    p {
+        text-align: center;
+        font-size: 0.9rem;
+        color: rebeccapurple;
+        padding-top: 20px
+    }
+    nav {
+        text-align: center;
+        padding-bottom: 10px;
+        color: rebeccapurple;
+        background-color: lavender;
+    }
+</style>
