--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,7 +5,9 @@
 
 <style>
     nav{
+        text-align: center;
         padding-bottom : 20px;
+        background-color: lavender;
     }
     a {
         margin: 15px;
@@ -13,6 +15,5 @@
         font-weight: bold;
         color: rebeccapurple;
         background-color: lavender;
-        padding: 1rem;
     }
 </style>
