--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,19 +1,6 @@
-<p>Bambou Franceschini</p>
-<nav>
-    <a href="/">Accueil</a>
-</nav>
-
-<style>
-    p {
-        text-align: center;
-        font-size: 0.9rem;
-        color: rebeccapurple;
-        padding-top: 20px
-    }
-    nav {
-        text-align: center;
-        padding-bottom: 10px;
-        color: rebeccapurple;
-        background-color: lavender;
-    }
-</style>
+<div class="bg-lavender">
+    <p class="text-center text-sm text-rebeccapurple pt-2.5">Bambou Franceschini</p>
+    <nav class="text-center font-bold pb-2.5 text-rebeccapurple bg-lavender">
+        <a href="/" class="text-rebeccapurple">Accueil</a>
+    </nav>
+</div>
