--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,19 +1,4 @@
-<nav>
-    <a href="/">Accueil</a>
-    <a href="/offres">Offres</a>
+<nav class="flex justify-center bg-lavender">
+    <a href="/" class="p-1.5 no-underline font-bold text-rebeccapurple bg-lavender">Accueil</a>
+    <a href="/offres" class="p-1.5 no-underline font-bold text-rebeccapurple bg-lavender">Offres</a>
 </nav>
-
-<style>
-    nav{
-        text-align: center;
-        padding-bottom : 20px;
-        background-color: lavender;
-    }
-    a {
-        margin: 15px;
-        text-decoration: none;
-        font-weight: bold;
-        color: rebeccapurple;
-        background-color: lavender;
-    }
-</style>
