--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import '../styles/global.css'
 import Header from "../components/header.astro";
 import Layout from '../layouts/Layout.astro';
+import titre from '../layouts/Layout.astro';
 ---
 
 
