--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,4 +1,4 @@
-<nav class="flex justify-center bg-lavender">
+<nav >
     <a href="/" class="p-1.5 no-underline font-bold text-rebeccapurple bg-lavender">Accueil</a>
     <a href="/offres" class="p-1.5 no-underline font-bold text-rebeccapurple bg-lavender">Offres</a>
 </nav>
