--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,6 +1,3 @@
-<div class="bg-lavender">
-    <p class="text-center text-sm text-rebeccapurple pt-2.5">Bambou Franceschini</p>
-    <nav class="text-center font-bold pb-2.5 text-rebeccapurple bg-lavender">
-        <a href="/" class="text-rebeccapurple">Accueil</a>
-    </nav>
+<div >
+    <p class="text-sm text-rebeccapurple pt-2.5">Bambou Franceschini</p>
 </div>
