--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -1,9 +1,10 @@
 ---
 const { offre } = Astro.props;
+import PbImage from "./PbImage.astro";
 ---
 
 <div class="card">
-    <img src={offre.imgUrl} alt={offre.nomMaison} />
+      <PbImage record={offre} recordImage={offre.images[0]} />
 
     <h2>{offre.nomMaison}</h2>
     <p>{offre.adresse}</p>
