--- a/src/components/PbImage.astro
+++ b/src/components/PbImage.astro
@@ -1,16 +1,23 @@
 ---
 import { getImageUrl } from '../js/backend.mjs';
 import { Image } from "astro:assets";
-
-const { record, recordImage } = Astro.props;
+const {
+  record,
+  recordImage,
+  width = 400,   // valeur par défaut
+  height = 300,  // valeur par défaut
+} = Astro.props;
 
 const imageURL = await getImageUrl(record, recordImage);
+
 ---
 
 {imageURL && 
     <Image
         src={imageURL}
-        alt={record.nomMaison || 'Image'}
+        alt={record.nom_maison || 'Image'}
         inferSize={true}
     />
 }
+
+
