--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -6,17 +6,17 @@ import PbImage from "./PbImage.astro";
 <div class="card">
       <PbImage record={offre} recordImage={offre.images[0]} />
 
-    <h2>{offre.nomMaison}</h2>
-    <p>{offre.adresse}</p>
+    <h2>{offre.nom_maison}</h2>
+    <!-- <p>{offre.adresse}</p> -->
 
-    <ul>
+    <!-- <ul>
         <li>Chambres : {offre.nbChambres}</li>
         <li>Salles de bain : {offre.nbSdb}</li>
         <li>Surface : {offre.surface} m²</li>
         <li>Prix : {offre.prix} €</li>
-    </ul>
+    </ul> -->
 
-    {offre.favori && <span class="favori">★ Favori</span>}
+    <!-- {offre.favori && <span class="favori">★ Favori</span>} -->
 </div>
 
 <style>
