--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -16,7 +16,7 @@ import PbImage from "./PbImage.astro";
         <li>Prix : {offre.prix} €</li>
     </ul> -->
 
-    <!-- {offre.favori && <span class="favori">★ Favori</span>} -->
+    {offre.favori && <span class="favori">★ Favori</span>}
 </div>
 
 <style>
