--- a/src/components/PbImage.astro
+++ b/src/components/PbImage.astro
@@ -17,7 +17,8 @@ const imageURL = await getImageUrl(record, recordImage);
         src={imageURL}
         alt={record.nom_maison || 'Image'}
         inferSize={true}
+        width={width}
+        height={height}
     />
 }
-
 
