--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -21,10 +21,11 @@ import PbImage from "./PbImage.astro";
 
 <style>
     .card {
-        border: 1px solid #ddd;
+        border: 1px solid oklch(66.7% 0.295 322.15);
         padding: 1rem;
         border-radius: 8px;
         max-width: 260px;
+        justify-items: center;
     }
     img {
         width: 100%;
