--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,4 +1,4 @@
-<nav >
-    <a href="/" class="p-1.5 no-underline font-bold text-rebeccapurple bg-lavender">Accueil</a>
-    <a href="/offres" class="p-1.5 no-underline font-bold text-rebeccapurple bg-lavender">Offres</a>
+<nav class ="bg-fuchsia-500 flex gap-4 justify-center p-4">
+    <a href="/" class="p-1.5 no-underline font-bold text-rebeccapurple text-white ">Accueil</a>
+    <a href="/offres" class="p-1.5 no-underline font-bold text-rebeccapurple text-white">Offres</a>
 </nav>
