--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,3 +1,3 @@
-<div >
-    <p class="text-sm text-rebeccapurple pt-2.5">Bambou Franceschini</p>
+<div class ="bg-fuchsia-500 flex flex-col items-center p-4">
+    <p class="text-sm text-white font-bold pt-2.5">Bambou Franceschini</p>
 </div>
