--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -1,9 +1,9 @@
 ---
-import '../styles/global.css'
-import Header from "../components/header.astro";
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/card.astro';
-import { getOffres } from '../js/backend.mjs'; 
+import '../../styles/global.css'
+import Header from "../../components/header.astro";
+import Layout from '../../layouts/Layout.astro';
+import Card from '../../components/card.astro';
+import { getOffres } from '../../js/backend.mjs'; 
 const offres = await getOffres();
 ---
 
