--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -36,3 +36,5 @@ import PbImage from "./PbImage.astro";
         font-weight: bold;
     }
 </style>
+
+<a href={`/offres/${offre.id}`}>Voir plus</a>
