--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,8 @@
 import Header from "../components/header.astro";
 import Footer from "../components/footer.astro";
 const { titre } = Astro.props;
+
+import '../styles/global.css';
 ---
 
 <html lang="fr">
