--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -3,8 +3,9 @@ import '../../styles/global.css'
 import Header from "../../components/header.astro";
 import Layout from '../../layouts/Layout.astro';
 import Card from '../../components/card.astro';
-import { getOffres } from '../../js/backend.mjs'; 
+import { getOffres, bySurface } from '../../js/backend.mjs'; 
 const offres = await getOffres();
+const records = await bySurface();
 ---
 
 
@@ -23,6 +24,7 @@ const offres = await getOffres();
              ))
             }
 
+        <a href={`/offres/surface/${records}`} class="bg-fuchsia-900 rounded-lg text-white p-2 no-underline hover:bg-fuchsia-800 transition">Maisons > 80 m²</a>
         <button id="favori-button" class="bg-fuchsia-900 rounded-lg text-white p-2">Afficher les favoris</button>
 
 
